Fix: Hide body overflow-x

--- a/src/css/elements/_elements.page.scss
+++ b/src/css/elements/_elements.page.scss
@@ -5,6 +5,7 @@ body {
   margin: 0;
   color: $color--text;
   font-family: $font--main;
+  overflow-x: hidden;
 }
 
 body {
